# applied_graphics

./: CLAUDE.md  CMakeLists.txt
GeometryTest/: main.cpp  matrix_test_module4.cpp  vector_test_module1.cpp  vector_test_module5.cpp
PolygonMesh/: bilinear_patch.cpp  bilinear_patch.hpp  geodesic_dome.cpp  geodesic_dome.hpp  lighting_shader_node.cpp  lighting_shader_node.hpp  main.cpp  object_creation.cpp  object_creation.hpp  shader_src.hpp  unit_subdivided_sphere.cpp  unit_subdivided_sphere.hpp  unit_trough.cpp  unit_trough.hpp
RayTracer/: framebuffer.cpp  framebuffer.hpp  image_texture.cpp  image_texture.hpp  lighting.cpp  lighting.hpp  main.cpp  material_node.cpp  material_node.hpp  procedural_texture.cpp  procedural_texture.hpp  ray.cpp  ray.hpp  ray_tracer.cpp  ray_tracer.hpp  rt_mesh_node.cpp  rt_mesh_node.hpp  rt_quad_node.cpp  rt_quad_node.hpp  rt_sphere_node.cpp  rt_sphere_node.hpp  shader_src.hpp  texture_node.cpp  texture_node.hpp
SampleProject/: lighting_shader_node.cpp  lighting_shader_node.hpp  main.cpp  pixel_lighting_tex.frag  pixel_lighting_tex.vert  shader_src.hpp
common/: CMakeLists.txt  event.cpp  event.hpp  logging.cpp  logging.hpp  preprocessor.hpp
filesystem_support/: CMakeLists.txt  file_loader.cpp  file_loader.hpp  file_locator.cpp  file_locator.hpp
geometry/: CMakeLists.txt  aabb.cpp  aabb.hpp  bounding_sphere.cpp  bounding_sphere.hpp  geometry.cpp  geometry.hpp  hpoint2.cpp  hpoint2.hpp  hpoint3.cpp  hpoint3.hpp  matrix.cpp  matrix.hpp  noise.cpp  noise.hpp  plane.cpp  plane.hpp  point2.cpp  point2.hpp  point3.cpp  point3.hpp  ray3.cpp  ray3.hpp  segment2.cpp  segment2.hpp  segment3.cpp  segment3.hpp  types.cpp  types.hpp  vector2.cpp  vector2.hpp  vector3.cpp  vector3.hpp
scene/: CMakeLists.txt  bounding_aabb_node.cpp  bounding_aabb_node.hpp  bounding_node.cpp  bounding_node.hpp  bounding_sphere_node.cpp  bounding_sphere_node.hpp  camera_node.cpp  camera_node.hpp  color3.cpp  color3.hpp  color4.cpp  color4.hpp  color_node.cpp  color_node.hpp  conic.cpp  conic.hpp  geometry_node.cpp  geometry_node.hpp  graphics.hpp  image_data.cpp  image_data.hpp  light_node.cpp  light_node.hpp  mesh_teapot.cpp  mesh_teapot.hpp  model_node.cpp  model_node.hpp  presentation_node.cpp  presentation_node.hpp  scene.cpp  scene.hpp  scene_node.cpp  scene_node.hpp  scene_state.cpp  scene_state.hpp  shader_node.cpp  shader_node.hpp  sphere_section.cpp  sphere_section.hpp  (+14 more)
shader_support/: CMakeLists.txt  glsl_shader.cpp  glsl_shader.hpp  glsl_shader_program.cpp  glsl_shader_program.hpp
